# omni_base_robot-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: mobile_base_controller.yaml  omni_base_configuration.yaml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: default_controllers.launch.py  mobile_base_controller.launch.py  omni_base_bringup.launch.py  robot_state_publisher.launch.py
module/: 00_robot_state_publisher.yaml
omni_base_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_base_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_base_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_base_description/launch/: robot_state_publisher.launch.py  show.launch.py
omni_base_description/meshes/base/: base_antenna_link_mirror.stl
omni_base_description/omni_base_description/: launch_arguments.py
omni_base_description/robots/: omni_base.urdf.xacro
omni_base_description/ros2_control/: ros2_control.urdf.xacro
omni_base_description/rviz/: omni_base.rviz
omni_base_description/test/: test_xacro.py
omni_base_description/urdf/base/: base.gazebo.xacro  base_sensors.urdf.xacro
omni_base_description/urdf/cameras_add_on/: cameras_add_on.urdf.xacro
omni_base_description/urdf/objects/: antenna.urdf.xacro
omni_base_description/urdf/wheels/: wheel.gazebo.xacro  wheel.ros2_control.xacro  wheel.urdf.xacro
omni_base_robot/: CHANGELOG.rst  package.xml
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-omni-base-bringup.spec  ros-humble-omni-base-description.spec  ros-humble-omni-base-robot.spec  template.spec
(+18 files in other folders)
